Resources page spacing issue between partners and articles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1002,6 +1002,9 @@ html {
 .mb-2 {
   margin-bottom: 0.5rem;
 }
+.mb-8 {
+  margin-bottom: 2rem;
+}
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -1225,6 +1228,9 @@ html {
 }
 .pb-6 {
   padding-bottom: 1.5rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
 }
 .pl-16 {
   padding-left: 4rem;
